welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:3: error: '(' expected but identifier found.
    if a>20
       ^max1020:5: error: '(' expected but identifier found.
    else if b>20
            ^